# bdf-pz

./: .env.sample  pyproject.toml
src/bdf_pz/: __init__.py  agent.py  app.py  azure_openai_model.py  context.py  exceptions.py  python_subkernel.py  utils.py  vllm_model.py
src/bdf_pz/assets/: style.css
src/bdf_pz/procedures/python3/: list_schemas.py  setup.py
